--- a/pages/home.html
+++ b/pages/home.html
@@ -6,16 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="../assets/home.css">
+    <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+    <!-- Swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
+
+    <!-- Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="../assets/general.css">
+    <link rel="stylesheet" href="../assets/home.css">
 
     <title>Mandy PetShop</title>
 </head>
 
 <body class="d-flex flex-column">
+
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top ">
         <div class="container-fluid">
             <img class="logo img-fluid ms-4" src="../assets/Images/LOGO3.png" alt="Logo">
@@ -42,11 +51,13 @@
         </div>
     </nav>
 
-    <h3 class="bienvenida">¡Bienvenidos a Mindy PetShop!</h3>
-    <p class="containertext mt-3">Mindy PetShop es la mejor tienda para mascotas creada por Purple Team! Somos la tienda
+    <h3 class="bienvenida"> ¡Bienvenidos a Mindy PetShop! </h3>
+    <p class="containertext mt-3">
+        Mindy PetShop es la mejor tienda para mascotas creada por Purple Team! Somos la tienda
         en línea de mascotas con mayor variedad de productos y servicios a domicilio en Colombia, contamos con
         productos (alimentos, snacks, farmacia y juguetes) y servicios como medicina veterinaria prepagada, veterinario
-        a domicilio, vacunación y spa para tu mascota.</p>
+        a domicilio, vacunación y spa para tu mascota.
+    </p>
     <div class="containercards mt-2 mb-5">
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
@@ -71,15 +82,12 @@
                 <div class="swiper-slide">
                     <img src="../assets/Images/Gato3.jpg" />
                 </div>
-
             </div>
             <div class="swiper-button-next botondespues"></div>
             <div class="swiper-button-prev botonantes"></div>
         </div>
     </div>
     </div>
-
-
 
     <footer class="footer mt-auto">
         <div class="container-fluid m-0">
@@ -136,16 +144,19 @@
         </div>
     </footer>
 
-
-    <!-- JS -->
-    <script src="../JS/home.js" type="module"></script>
+    <!-- Boostrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
         crossorigin="anonymous"></script>
+
+    <!-- Swiper -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
+    <!-- JS -->
+    <script src="../JS/home.js" type="module"></script>
 
 </body>
 
