Added data in details

--- a/pages/juguetes.html
+++ b/pages/juguetes.html
@@ -64,20 +64,20 @@
 
     </div>
 
-    <div class="details inactiva">
+    <div id="details" class="">
         <button class="clouse"><i class="fa-solid fa-xmark"></i></button>
         <img src="https://cdn.shopify.com/s/files/1/0406/8003/0364/products/product-image-721785001_1024x1024.jpg?v=1592941186"
-            alt="">
+            alt="" id="image">
         <div class="datos">
-            <h2> Botella bebedero portatil </h2>
+            <h2 id="title"> Botella bebedero portatil </h2>
             <div>
-                <p>
+                <p id="description">
                     Con una tapa con un cuenco es ideal para las caminatas largas o en dias calurosos. Uno libera el
                     agua y pone el cuenco a disposición de su mascota para que se hidrate y siga el camino. Viene en
                     varios colores, consultar previamente
                 </p>
-                <p> Precio: 840 </p>
-                <p> stock: 9 </p>
+                <p id="price"> Precio: 840 </p>
+                <p id="stock"> stock: 9 </p>
             </div>
         </div>
         <div class="sparkle-button">
