--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -6,16 +6,92 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="../assets/carrito.css">
+    <!-- Boostrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
-    <title>Document</title>
+    <!-- Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3b5c623e3a.js" crossorigin="anonymous"></script>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="../assets/general.css">
+    <link rel="stylesheet" href="../assets/nuevoProducto.css">
+
+    <title>Carrito</title>
 </head>
 
-<body>
+<body class="d-flex flex-column">
+
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top ">
+        <div class="container-fluid">
+            <img class="logo img-fluid ms-4" src="../assets/Images/LOGO3.png" alt="Logo">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ms-auto gap-2 me-5">
+                    <a class="nav-link" aria-current="page" href="home.html">Inicio</a>
+                    <a class="nav-link" href="farmacia.html">Farmacia</a>
+                    <a class="nav-link" href="juguetes.html">Juguetes</a>
+                    <a class="nav-link" href="nuevoProducto.html">Nuevo Producto</a>
+                    <a class="nav-link active" href="#"><i class="fa-solid fa-cart-shopping fa-lg"></i></a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <footer class="footer mt-auto">
+        <div class="container-fluid m-0">
+            <div
+                class="row row-cols-1 row-cols-md-3 row-cols-sm-3 row-cols-lg-5  d-flex align-items-center g-4 mt-1 mb-1">
+                <div class="text-center">
+                    <img src="../assets/Images/LOGO2.png" class="logoFooter">
+                </div>
+                <div class="text-center">
+                    <h6>ACERCA DE NOSOTROS</h6>
+                    <p>Sobre Mindy</p>
+                    <p>Servicios</p>
+                </div>
+                <div class="text-center">
+                    <h6>INFORMACION</h6>
+                    <p>Teléfono: +57 3120000000</p>
+                    <p>Correo: mindy@gmail.com</p>
+                </div>
+                <div class="text-center">
+                    <a class="btn btn-link text-dark m-1" href="https://www.instagram.com/" role="button"
+                        data-mdb-ripple-color="dark"><i class="fa-brands fa-instagram fa-2xl imgicono"></i></a>
+
+                    <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.facebook.com/"
+                        role="button" data-mdb-ripple-color="dark"><i
+                            class="fa-brands fa-facebook fa-xl imgicono"></i></a>
+
+                    <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.whatsapp.com/"
+                        role="button" data-mdb-ripple-color="dark"><i
+                            class="fa-brands fa-whatsapp fa-xl imgicono"></i></a>
+                </div>
+                <div class="text-center">
+                    <i class="fa-regular fa-copyright fa-sm"></i>
+                    Purple Team
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Boostrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+
+    <!-- Swiper -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
     <!-- JS -->
-    <script src="../JS/carrito.js"></script>
+    <script src="../JS/nuevoProducto.js"></script>
 </body>
 
 </html>
