--- a/pages/juguetes.html
+++ b/pages/juguetes.html
@@ -98,7 +98,7 @@
                 </svg>
                 <span class="text"> Añadir al Carrito </span>
             </button>
-            <div class="bodydrop"></div>
+            <!-- <div class="bodydrop"></div> -->
             <span aria-hidden="true" class="particle-pen">
                 <svg class="particle" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
