--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -42,6 +42,36 @@
         </div>
     </nav>
 
+
+    <!-- <div class="carrito">
+        <div class="row row-cols-2 row-cols-md-4 row-cols-sm-3 row-cols-lg-6 mb-5">
+            <div class="col">
+                <img src="../assets/Images/Gato1.jpg" class="imglista" alt="">
+            </div>
+            <div class="col">
+                <h5 class="card-title text-start">${objeto.nombre}</h5>
+                <p>Marca: ${objeto.Marca}
+                    <br>Tipo: ${objeto.Tipo}
+                </p>
+            </div>
+            <div class="col">
+                <br>
+                <p>Precio: ${objeto.precio} USD</p>
+            </div>
+            <div class="col">
+                <br>
+                <p>Cantidad: ${objeto.cantidad} </p>
+            </div>
+            <div class="col">
+                <br>
+                <p>Subtotal: ${objeto.subtotal} </p>
+            </div>
+            <div class="col">
+                <br><a id="" class="btn btn-outline-dark me-1" onClick="eliminarProducto(this.id)">Eliminar</a>
+            </div>
+        </div>
+    </div> -->
+
     <footer class="footer mt-auto">
         <div class="container-fluid m-0">
             <div
