--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -12,11 +12,11 @@
 
     <!-- Icons -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/3b5c623e3a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
     <!-- CSS -->
     <link rel="stylesheet" href="../assets/general.css">
-    <link rel="stylesheet" href="../assets/nuevoProducto.css">
+    <link rel="stylesheet" href="../assets/carrito.css">
 
     <title>Carrito</title>
 </head>
@@ -36,41 +36,101 @@
                     <a class="nav-link" href="farmacia.html">Farmacia</a>
                     <a class="nav-link" href="juguetes.html">Juguetes</a>
                     <a class="nav-link" href="nuevoProducto.html">Nuevo Producto</a>
-                    <a class="nav-link active" href="#"><i class="fa-solid fa-cart-shopping fa-lg"></i></a>
+                    <a class="nav-link active" href="#"><i class="bi bi-cart-fill imgcarrito"></i></a>
                 </div>
             </div>
         </div>
     </nav>
 
 
-    <!-- <div class="carrito">
-        <div class="row row-cols-2 row-cols-md-4 row-cols-sm-3 row-cols-lg-6 mb-5">
-            <div class="col">
-                <img src="../assets/Images/Gato1.jpg" class="imglista" alt="">
+        <div class="carrito mb-4">
+            <div class="row  text-center filas rounded mb-1">
+                <div class="col-lg-3 col-md-6 col-12 mt-2 mb-2">
+                    <img src="https://puppis.vteximg.com.br/arquivos/ids/167383-1000-1000/366255.jpg?v=637014017122630000" class="imglista rounded " alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 infotit">
+                    <h5 class="card-title">Antipulgas Y Garrapatas Bravecto Para Perros</h5>
+                    <p>Tipo
+                    <br>Precio</p>
+                </div>
+                <div class="col-lg-2 col-md-4 col-4 colinfo">
+                    <p>Cantidad</p>
+                </div>
+                <div class="col-lg-2 col-md-4 col-4 colinfo">
+                    <p>Subtotal</p>
+                </div>
+                <div class="col-lg-1 col-md-4 col-4 colinfo">
+                    <button class="botoneliminar"><i class="bi bi-trash3"></i></button>
+                </div>
             </div>
-            <div class="col">
-                <h5 class="card-title text-start">${objeto.nombre}</h5>
-                <p>Marca: ${objeto.Marca}
-                    <br>Tipo: ${objeto.Tipo}
-                </p>
+            
+            <div class="row  text-center filas rounded mb-1">
+                <div class="col-lg-3 col-md-6 col-12 mt-2 mb-2">
+                    <img src="https://cdn.shopify.com/s/files/1/0406/8003/0364/products/product-image-721785001_1024x1024.jpg?v=1592941186" class="imglista rounded " alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 infotit">
+                    <h5 class="card-title">Botella bebedero portatil</h5>
+                    <p>Tipo
+                    <br>Precio</p>
+                </div>
+                <div class="col-lg-2 col-md-4 col-4 colinfo">
+                    <p>Cantidad</p>
+                </div>
+                <div class="col-lg-2 col-md-4 col-4 colinfo">
+                    <p>Subtotal</p>
+                </div>
+                <div class="col-lg-1 col-md-4 col-4 colinfo">
+                    <button class="botoneliminar"><i class="bi bi-trash3"></i></button>
+                </div>
             </div>
-            <div class="col">
-                <br>
-                <p>Precio: ${objeto.precio} USD</p>
+
+            <div class="row  text-center filas rounded mb-1">
+                <div class="col-lg-3 col-md-6 col-12 mt-2 mb-2">
+                    <img src="https://cdn.shopify.com/s/files/1/0406/8003/0364/products/product-image-721785001_1024x1024.jpg?v=1592941186" class="imglista rounded " alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 infotit">
+                    <h5 class="card-title">Botella bebedero portatil</h5>
+                    <p>Tipo
+                    <br>Precio</p>
+                </div>
+                <div class="col-lg-2 col-md-4 col-4 colinfo">
+                    <p>Cantidad</p>
+                </div>
+                <div class="col-lg-2 col-md-4 col-4 colinfo">
+                    <p>Subtotal</p>
+                </div>
+                <div class="col-lg-1 col-md-4 col-4 colinfo">
+                    <button class="botoneliminar"><i class="bi bi-trash3"></i></button>
+                </div>
             </div>
-            <div class="col">
-                <br>
-                <p>Cantidad: ${objeto.cantidad} </p>
-            </div>
-            <div class="col">
-                <br>
-                <p>Subtotal: ${objeto.subtotal} </p>
-            </div>
-            <div class="col">
-                <br><a id="" class="btn btn-outline-dark me-1" onClick="eliminarProducto(this.id)">Eliminar</a>
+
+            <div class="row  text-center filas rounded mb-1">
+                <div class="col-lg-3 col-md-6 col-12 mt-2 mb-2">
+                    <img src="https://cdn.shopify.com/s/files/1/0406/8003/0364/products/product-image-721785001_1024x1024.jpg?v=1592941186" class="imglista rounded " alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 infotit">
+                    <h5 class="card-title">Botella bebedero portatil</h5>
+                    <p>Tipo
+                    <br>Precio</p>
+                </div>
+                <div class="col-lg-2 col-md-4 col-4 colinfo">
+                    <p>Cantidad</p>
+                </div>
+                <div class="col-lg-2 col-md-4 col-4 colinfo">
+                    <p>Subtotal</p>
+                </div>
+                <div class="col-lg-1 col-md-4 col-4 colinfo">
+                    <button class="botoneliminar"><i class="bi bi-trash3"></i></button>
+                </div>
             </div>
         </div>
-    </div> -->
+
+
+
+
+
+
+
 
     <footer class="footer mt-auto">
         <div class="container-fluid m-0">
@@ -91,18 +151,16 @@
                 </div>
                 <div class="text-center">
                     <a class="btn btn-link text-dark m-1" href="https://www.instagram.com/" role="button"
-                        data-mdb-ripple-color="dark"><i class="fa-brands fa-instagram fa-2xl imgicono"></i></a>
+                        data-mdb-ripple-color="dark"><i class="bi bi-instagram imgicono"></i></a>
 
                     <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.facebook.com/"
-                        role="button" data-mdb-ripple-color="dark"><i
-                            class="fa-brands fa-facebook fa-xl imgicono"></i></a>
+                        role="button" data-mdb-ripple-color="dark"><i class="bi bi-facebook imgicono"></i></a>
 
                     <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.whatsapp.com/"
-                        role="button" data-mdb-ripple-color="dark"><i
-                            class="fa-brands fa-whatsapp fa-xl imgicono"></i></a>
+                        role="button" data-mdb-ripple-color="dark"><i class="bi bi-whatsapp imgicono"></i></a>
                 </div>
                 <div class="text-center">
-                    <i class="fa-regular fa-copyright fa-sm"></i>
+                    <i class="bi bi-c-circle"></i>
                     Purple Team
                 </div>
             </div>
@@ -117,11 +175,8 @@
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
         crossorigin="anonymous"></script>
 
-    <!-- Swiper -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-
     <!-- JS -->
-    <script src="../JS/nuevoProducto.js"></script>
+    <script src="../JS/carrito.js"></script>
 </body>
 
 </html>
