--- a/pages/home.html
+++ b/pages/home.html
@@ -15,7 +15,7 @@
 
     <!-- Icons -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/3b5c623e3a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
     <!-- CSS -->
     <link rel="stylesheet" href="../assets/general.css">
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="farmacia.html">Farmacia</a>
                     <a class="nav-link" href="juguetes.html">Juguetes</a>
                     <a class="nav-link" href="nuevoProducto.html">Nuevo Producto</a>
-                    <a class="nav-link" href="carrito.html"><i class="fa-solid fa-cart-shopping fa-lg"></i></a>
+                    <a class="nav-link" href="carrito.html"><i class="bi bi-cart-fill imgcarrito"></i></a>
                 </div>
             </div>
         </div>
@@ -102,16 +102,16 @@
                 </div>
                 <div class="text-center">
                     <a class="btn btn-link text-dark m-1" href="https://www.instagram.com/" role="button"
-                        data-mdb-ripple-color="dark"><i class="fa-brands fa-instagram fa-2xl imgicono" ></i></a>
+                        data-mdb-ripple-color="dark"><i class="bi bi-instagram imgicono"></i></a>
 
                     <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.facebook.com/"
-                        role="button" data-mdb-ripple-color="dark"><i class="fa-brands fa-facebook fa-xl imgicono"></i></a>
+                        role="button" data-mdb-ripple-color="dark"><i class="bi bi-facebook imgicono"></i></a>
 
                     <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.whatsapp.com/"
-                        role="button" data-mdb-ripple-color="dark"><i class="fa-brands fa-whatsapp fa-xl imgicono"></i></a>
+                        role="button" data-mdb-ripple-color="dark"><i class="bi bi-whatsapp imgicono"></i></a>
                 </div>
                 <div class="text-center">
-                    <i class="fa-regular fa-copyright fa-sm"></i>
+                    <i class="bi bi-c-circle"></i>
                     Purple Team
                 </div>
             </div>
