--- a/pages/juguetes.html
+++ b/pages/juguetes.html
@@ -12,7 +12,7 @@
 
     <!-- Icons -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/3b5c623e3a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
     <!-- CSS -->
     <link rel="stylesheet" href="../assets/general.css">
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="farmacia.html">Farmacia</a>
                     <a class="nav-link active" href="#">Juguetes</a>
                     <a class="nav-link" href="nuevoProducto.html">Nuevo Producto</a>
-                    <a class="nav-link" href="carrito.html"><i class="fa-solid fa-cart-shopping fa-lg"></i></a>
+                    <a class="nav-link" href="carrito.html"><i class="bi bi-cart-fill imgcarrito"></i></a>
                 </div>
             </div>
         </div>
@@ -45,14 +45,11 @@
     <div class="filtros">
         <div class="search d-flex justify-content-center g-3">
             <input id="search" class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-            <button id="filterSearch" class="btn me-2" type="button"><i
-                    class="fa-solid fa-magnifying-glass fa-lg search"></i></button>
+            <button id="filterSearch" class="btn me-2" type="button"><i class="bi bi-search"></i></button>
         </div>
         <div class="d-flex justify-content-center mt-1 mb-2 g-4">
-            <button id="OrdenUp" class="btn  mt-1 me-2" type="button" disabled><i
-                    class="ordenar fa-solid fa-arrow-up-z-a fa-lg"></i></button>
-            <button id="OrdenDown" class="btn  mt-1 me-2" type="button"><i
-                    class="ordenar fa-solid fa-arrow-down-z-a fa-lg"></i></button>
+            <button id="OrdenUp" class="btn  mt-1 me-2" type="button" disabled><i class="bi bi-sort-alpha-down ordenar"></i></button>
+            <button id="OrdenDown" class="btn  mt-1 me-2" type="button"><i class="bi bi-sort-alpha-down-alt ordenar"></i></button>
         </div>
     </div>
 
@@ -65,7 +62,7 @@
     </div>
 
     <div id="details" class="">
-        <button class="clouse"><i class="fa-solid fa-xmark"></i></button>
+        <button class="clouse"><i class="bi bi-x-lg"></i></button>
         <div class="datos">
             <img src="https://cdn.shopify.com/s/files/1/0406/8003/0364/products/product-image-721785001_1024x1024.jpg?v=1592941186"
                 alt="" id="image">
@@ -221,18 +218,16 @@
                 </div>
                 <div class="text-center">
                     <a class="btn btn-link text-dark m-1" href="https://www.instagram.com/" role="button"
-                        data-mdb-ripple-color="dark"><i class="fa-brands fa-instagram fa-2xl imgicono"></i></a>
+                        data-mdb-ripple-color="dark"><i class="bi bi-instagram imgicono"></i></a>
 
                     <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.facebook.com/"
-                        role="button" data-mdb-ripple-color="dark"><i
-                            class="fa-brands fa-facebook fa-xl imgicono"></i></a>
+                        role="button" data-mdb-ripple-color="dark"><i class="bi bi-facebook imgicono"></i></a>
 
                     <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.whatsapp.com/"
-                        role="button" data-mdb-ripple-color="dark"><i
-                            class="fa-brands fa-whatsapp fa-xl imgicono"></i></a>
+                        role="button" data-mdb-ripple-color="dark"><i class="bi bi-whatsapp imgicono"></i></a>
                 </div>
                 <div class="text-center">
-                    <i class="fa-regular fa-copyright fa-sm"></i>
+                    <i class="bi bi-c-circle"></i>
                     Purple Team
                 </div>
             </div>
