No se realizo mucho, commit menos importante

--- a/pages/juguetes.html
+++ b/pages/juguetes.html
@@ -12,7 +12,7 @@
 
     <!-- Icons -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/3b5c623e3a.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/4f6997cd36.js" crossorigin="anonymous"></script>
 
     <!-- CSS -->
     <link rel="stylesheet" href="../assets/general.css">
@@ -69,8 +69,8 @@
         <div class="datos">
             <img src="https://cdn.shopify.com/s/files/1/0406/8003/0364/products/product-image-721785001_1024x1024.jpg?v=1592941186"
                 alt="" id="image">
-            <h2 id="title"> Botella bebedero portatil </h2>
-            <div>
+            <div class="contenido">
+                <h2 id="title"> Botella bebedero portatil </h2>
                 <p id="description">
                     Con una tapa con un cuenco es ideal para las caminatas largas o en dias calurosos. Uno libera el
                     agua y pone el cuenco a disposición de su mascota para que se hidrate y siga el camino. Viene en
@@ -78,6 +78,11 @@
                 </p>
                 <p id="price"> Precio: 840 </p>
                 <p id="stock"> stock: 9 </p>
+            </div>
+            <div class="cantidad">
+                <div><i class="fa-solid fa-square-plus fa-lg"></i></div>
+                <h5> 0 </h5>
+                <div><i class="fa-solid fa-square-plus fa-lg"></i></div>
             </div>
         </div>
         <div class="sparkle-button">
@@ -246,6 +251,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
         crossorigin="anonymous"></script>
+
+    <!-- Font Awesome -->
 
     <!-- JS -->
     <script src="../JS/general.js"></script>
