--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -22,7 +22,6 @@
 </head>
 
 <body class="d-flex flex-column">
-
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top ">
         <div class="container-fluid">
             <img class="logo img-fluid ms-4" src="../assets/Images/LOGO3.png" alt="Logo">
@@ -42,95 +41,13 @@
         </div>
     </nav>
 
+    <div class="carrito mb-4">
 
-        <div class="carrito mb-4">
-            <div class="row  text-center filas rounded mb-1">
-                <div class="col-lg-3 col-md-6 col-12 mt-2 mb-2">
-                    <img src="https://puppis.vteximg.com.br/arquivos/ids/167383-1000-1000/366255.jpg?v=637014017122630000" class="imglista rounded " alt="">
-                </div>
-                <div class="col-lg-4 col-md-6 col-12 infotit">
-                    <h5 class="card-title">Antipulgas Y Garrapatas Bravecto Para Perros</h5>
-                    <p>Tipo
-                    <br>Precio</p>
-                </div>
-                <div class="col-lg-2 col-md-4 col-4 colinfo">
-                    <p>Cantidad</p>
-                </div>
-                <div class="col-lg-2 col-md-4 col-4 colinfo">
-                    <p>Subtotal</p>
-                </div>
-                <div class="col-lg-1 col-md-4 col-4 colinfo">
-                    <button class="botoneliminar"><i class="bi bi-trash3"></i></button>
-                </div>
-            </div>
-            
-            <div class="row  text-center filas rounded mb-1">
-                <div class="col-lg-3 col-md-6 col-12 mt-2 mb-2">
-                    <img src="https://cdn.shopify.com/s/files/1/0406/8003/0364/products/product-image-721785001_1024x1024.jpg?v=1592941186" class="imglista rounded " alt="">
-                </div>
-                <div class="col-lg-4 col-md-6 col-12 infotit">
-                    <h5 class="card-title">Botella bebedero portatil</h5>
-                    <p>Tipo
-                    <br>Precio</p>
-                </div>
-                <div class="col-lg-2 col-md-4 col-4 colinfo">
-                    <p>Cantidad</p>
-                </div>
-                <div class="col-lg-2 col-md-4 col-4 colinfo">
-                    <p>Subtotal</p>
-                </div>
-                <div class="col-lg-1 col-md-4 col-4 colinfo">
-                    <button class="botoneliminar"><i class="bi bi-trash3"></i></button>
-                </div>
-            </div>
-
-            <div class="row  text-center filas rounded mb-1">
-                <div class="col-lg-3 col-md-6 col-12 mt-2 mb-2">
-                    <img src="https://cdn.shopify.com/s/files/1/0406/8003/0364/products/product-image-721785001_1024x1024.jpg?v=1592941186" class="imglista rounded " alt="">
-                </div>
-                <div class="col-lg-4 col-md-6 col-12 infotit">
-                    <h5 class="card-title">Botella bebedero portatil</h5>
-                    <p>Tipo
-                    <br>Precio</p>
-                </div>
-                <div class="col-lg-2 col-md-4 col-4 colinfo">
-                    <p>Cantidad</p>
-                </div>
-                <div class="col-lg-2 col-md-4 col-4 colinfo">
-                    <p>Subtotal</p>
-                </div>
-                <div class="col-lg-1 col-md-4 col-4 colinfo">
-                    <button class="botoneliminar"><i class="bi bi-trash3"></i></button>
-                </div>
-            </div>
-
-            <div class="row  text-center filas rounded mb-1">
-                <div class="col-lg-3 col-md-6 col-12 mt-2 mb-2">
-                    <img src="https://cdn.shopify.com/s/files/1/0406/8003/0364/products/product-image-721785001_1024x1024.jpg?v=1592941186" class="imglista rounded " alt="">
-                </div>
-                <div class="col-lg-4 col-md-6 col-12 infotit">
-                    <h5 class="card-title">Botella bebedero portatil</h5>
-                    <p>Tipo
-                    <br>Precio</p>
-                </div>
-                <div class="col-lg-2 col-md-4 col-4 colinfo">
-                    <p>Cantidad</p>
-                </div>
-                <div class="col-lg-2 col-md-4 col-4 colinfo">
-                    <p>Subtotal</p>
-                </div>
-                <div class="col-lg-1 col-md-4 col-4 colinfo">
-                    <button class="botoneliminar"><i class="bi bi-trash3"></i></button>
-                </div>
-            </div>
-        </div>
-
-
-
-
-
-
-
+    </div>
+    <div class="d-flex justify-content-around">
+        <p>Total: </p>
+        <p class="total">numero</p>
+    </div>
 
     <footer class="footer mt-auto">
         <div class="container-fluid m-0">
