--- a/pages/farmacia.html
+++ b/pages/farmacia.html
@@ -35,7 +35,8 @@
                     <a class="nav-link active" href="#">Farmacia</a>
                     <a class="nav-link" href="juguetes.html">Juguetes</a>
                     <a class="nav-link" href="nuevoProducto.html">Nuevo Producto</a>
-                    <a class="nav-link" href="carrito.html"><i class="bi bi-cart-fill imgcarrito"></i></a>
+                    <a id="guardarProductos" class="nav-link" href="carrito.html"><i
+                            class="bi bi-cart-fill imgcarrito"></i></a>
                 </div>
             </div>
         </div>
@@ -47,8 +48,10 @@
             <button id="filterSearch" class="btn me-2" type="button"><i class="bi bi-search"></i></button>
         </div>
         <div class="d-flex justify-content-center mt-1 mb-2 g-4">
-            <button id="OrdenUp" class="btn  mt-1 me-2" type="button" disabled><i class="bi bi-sort-alpha-down ordenar"></i></button>
-            <button id="OrdenDown" class="btn  mt-1 me-2" type="button"><i class="bi bi-sort-alpha-down-alt ordenar"></i></button>
+            <button id="OrdenUp" class="btn  mt-1 me-2" type="button" disabled><i
+                    class="bi bi-sort-alpha-down ordenar"></i></button>
+            <button id="OrdenDown" class="btn  mt-1 me-2" type="button"><i
+                    class="bi bi-sort-alpha-down-alt ordenar"></i></button>
         </div>
     </div>
 
