--- a/pages/juguetes.html
+++ b/pages/juguetes.html
@@ -36,7 +36,8 @@
                     <a class="nav-link" href="farmacia.html">Farmacia</a>
                     <a class="nav-link active" href="#">Juguetes</a>
                     <a class="nav-link" href="nuevoProducto.html">Nuevo Producto</a>
-                    <a class="nav-link" href="carrito.html"><i class="bi bi-cart-fill imgcarrito"></i></a>
+                    <a id="guardarProductos" class="nav-link" href="carrito.html"><i
+                            class="bi bi-cart-fill imgcarrito"></i></a>
                 </div>
             </div>
         </div>
