Added message in carrito

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -44,7 +44,7 @@
     <div class="carrito mb-4">
 
     </div>
-    <div class="d-flex justify-content-around">
+    <div class="contendor-total d-flex justify-content-around">
         <p>Total: </p>
         <p class="total">numero</p>
     </div>
