--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -44,9 +44,14 @@
     <div class="carrito mb-4">
 
     </div>
-    <div class="contendor-total d-flex justify-content-around">
-        <p>Total: </p>
-        <p class="total">numero</p>
+    <div class="contendor-total d-flex flex-column">
+        <div class="d-flex justify-content-around">
+            <p>Total: </p>
+            <p class="total">numero</p>
+        </div>
+        <div class="d-flex justify-content-center">
+            <button onclick="pagar()" type="button" class="btn btn-outline-success"> Pagar </button>
+        </div>
     </div>
 
     <footer class="footer mt-auto">
