--- a/pages/juguetes.html
+++ b/pages/juguetes.html
@@ -32,11 +32,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto gap-2 me-5">
-                    <a class="nav-link" aria-current="page" href="home.html">Inicio</a>
-                    <a class="nav-link" href="farmacia.html">Farmacia</a>
-                    <a class="nav-link active" href="#">Juguetes</a>
-                    <a class="nav-link" href="nuevoProducto.html">Nuevo Producto</a>
-                    <a id="guardarProductos" class="nav-link" href="carrito.html"><i
+                    <a class="nav-link" aria-current="page" href="home.html" onclick="guardarProd()">Inicio</a>
+                    <a class="nav-link" href="farmacia.html" onclick="guardarProd()">Farmacia</a>
+                    <a class="nav-link active" href="#" onclick="guardarProd()">Juguetes</a>
+                    <a class="nav-link" href="nuevoProducto.html" onclick="guardarProd()">Nuevo Producto</a>
+                    <a class="nav-link" href="carrito.html" onclick="guardarProd()"><i
                             class="bi bi-cart-fill imgcarrito"></i></a>
                 </div>
             </div>
